	- enabled AddressSanitizer and UndefinedBehaviorSanitizer with clang always
	- fixed crash in split_string() when no delimiter is found
	- fixed crash in free_array() when array is NULL
	- greatly improved the speed of read_file()
	- added -listsource and -listmidi to "test_frontend"
	- always include debug information in the binaries
	- treat compiler warnings as errors
	- moved error reporting and handling out of read_file() - returns errno in error case now
	- updated copyright year in README
	- only keep final.png when "store_output" is set to 2
	- only call -listsoftware for sets with "original" softwarelist hooked up
	- also run a software list entry without any slot when "use_softwarelist" is set to 3
	- no softwarelist entries might have been used at all when "use_softwarelist" is set to 3 because of bogus counting of processed entries
	- the number of the softwarelist entry in the result will now always match the place in the software list
	- added support for running one entry for each interface found in the softwarelist by setting "use_softwarelist" 4
	- use new option "-sound none" when "use_sound" is set to 0
	- added option "hack_nosound" to support version with old option -nosound
	- fixed handle leak in read_file() when it encountered an error during reading
	
	create_report
	- pass the file descriptor as parameter to PRINT_INFO
	- improved layout of comparison report
	- removed option "ignore_exitcode_4" and always filter the mandatory device messages
	- filter unprintable characters from input XMLs
	- improved summary a bit
	- "called within reset scope by" errors did not include stderr
	- added hard-coded "runtime error:" reporting for now (only generated by UndefinedBehaviorSanitizer)
	- added tagmap report (report_type 3)
	- added speed report (report_type 4)
	- added option "tagmap_threshold" for report_type 3
	- added option "speed_threshold" for report_type 4